--- a/src/components/Squares/Squares.scss
+++ b/src/components/Squares/Squares.scss
@@ -252,9 +252,10 @@
     &--regular {
         background-color: white;
         transition: all 0.1s ease-out 0.1s;
-
+        
         &--dark-mode {
             background-color: black;
+            transition: all 0.1s ease-out 0.1s;
         }
     }
 
@@ -262,6 +263,7 @@
         background-color: white;
         transition: all 0s linear 0s;
         &--dark-mode {
+            transition: all 0s linear 0s;
             background-color: black;
         }
     }
@@ -271,6 +273,7 @@
         transition: all 0.5s linear 0s;
         &--dark-mode {
             background-color: black;
+            transition: all 0.5s linear 0s;
         }
     }
 
@@ -279,6 +282,7 @@
         transition: all 2s linear 0s;
         &--dark-mode {
             background-color: black;
+            transition: all 2s linear 0s;
         }
     }
     
