--- a/src/components/VisualEye/VisualEye.scss
+++ b/src/components/VisualEye/VisualEye.scss
@@ -82,15 +82,15 @@
 
 @keyframes shake {
     0% {
-        right: 0.1rem
+        right: 10rem
     }
 
     50% {
-        right: -0.1rem
+        right: 12rem
     }
 
     100% {
-        right: 0.1rem;
+        right: 10rem;
     }
 }
 
@@ -123,7 +123,7 @@
         }
 
         &--inactive {
-            // transition: all 5s ease-in;
+            transition: all 5s ease-in;
         }
     }
 
@@ -137,6 +137,7 @@
     &--active {
         animation: shake 0.005s linear infinite;
     }
+
     
     &__transparent-eye {
         visibility: hidden;
@@ -156,10 +157,10 @@
     &__transparent-eye-pulse {
         opacity: 0;
         position: relative;
-        right: 56rem;
-        top: -0.5rem;
+        right: 65rem;
+        top: -1rem;
         height: 22rem;
-        z-index: 5;
+        z-index: 2000;
 
         &--active {
             visibility: visible;
